--- a/16janv/index.html
+++ b/16janv/index.html
@@ -11,6 +11,14 @@
         <header>
             <h1>Instagram tag Fetch</h1>
         </header>
+
+        <main>
+            <!-- Une liste de lien vers les images instagram -->
+        </main>
+
+        <footer>
+            <p>Under WTFPL Julizen Noyerr 2020</p>
+        </footer>
         
         <script src="./js/main.js"></script>
     </body>
