--- a/16janv/index.html
+++ b/16janv/index.html
@@ -13,11 +13,11 @@
         </header>
 
         <main>
-            <!-- Une liste de lien vers les images instagram -->
+            <section id="popin"></section>
         </main>
 
         <footer>
-            <p>Under WTFPL Julizen Noyerr 2020</p>
+            <p>Under WTFPL Julien Noyer 2020</p>
         </footer>
         
         <script src="./js/main.js"></script>
