Ajout du formulaire

--- a/16janv/index.html
+++ b/16janv/index.html
@@ -5,11 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Instagram tag Fetch</title>
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic"> 
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css"> 
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.css">
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
         <header>
             <h1>Instagram tag Fetch</h1>
+        <form action="#">
+            <input type="text" name="tag" id="tag" placeholder="Chsoir un tag" required minlength="2">
+            <button type="submit">Rechercher</button>
+        </form>
         </header>
 
         <main>
